--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "jingo",
-  "version": "1.9.7",
-  "description": "A nodejs based wiki engine",
-  "author": "Claudio Cicali <claudio.cicali@gmail.com>",
+  "name": "jingo-retro",
+  "version": "2.0.0-beta",
+  "description": "A nodejs based wiki engine for retro systems",
+  "author": "queenkjuul <queenkjuul@pm.me>, Claudio Cicali <claudio.cicali@gmail.com>",
   "keywords": [
     "wiki",
     "git",
@@ -23,9 +23,9 @@
       "chai"
     ]
   },
-  "main": "jingo",
+  "main": "jingo-retro",
   "bin": {
-    "jingo": "./jingo"
+    "jingo-retro": "./jingo-retro"
   },
   "repository": {
     "type": "git",
@@ -71,8 +71,8 @@
   },
   "scripts": {
     "test": "node_modules/.bin/mocha test/spec",
-    "start": "./jingo -c config.yaml",
-    "start-dev": "nodemon ./jingo -c config.yaml"
+    "start": "./jingo-retro -c config.yaml",
+    "start-dev": "nodemon ./jingo-retro -c config.yaml"
   },
   "engines": {
     "node": ">=0.8",
